{
  "version": 4,
  "terraform_version": "1.1.0",
  "serial": 53,
  "lineage": "db6e8e00-16c5-b73f-4fda-07b7a98c537e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed9277fb7eb570c9",
            "arn": "arn:aws:ec2:us-east-1:135345210272:instance/i-09546b0c0832ff542",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09546b0c0832ff542",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-098e83b71a4faab2c",
            "private_dns": "ip-192-168-20-125.ec2.internal",
            "private_ip": "192.168.20.125",
            "public_ip": "54.197.18.166",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-090622033b180dc87",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0500c40ccf3244f70",
            "tags": {
              "Name": "iti_instances"
            },
            "tags_all": {
              "Name": "iti_instances"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bb5e45f46f052368",
              "sg-0d855d7421e67656e",
              "sg-0f778f3c219cffe07"
            ]
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "aws_security_group.allow_outbound",
            "aws_security_group.allow_ssh",
            "aws_security_group.database"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed9277fb7eb570c9",
            "arn": "arn:aws:ec2:us-east-1:135345210272:instance/i-0e31ed000ef93cc71",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e31ed000ef93cc71",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b460f468709903d0",
            "private_dns": "ip-192-168-21-10.ec2.internal",
            "private_ip": "192.168.21.10",
            "public_ip": "54.174.137.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-098609f8d8019a1c2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03f3583f2cf141263",
            "tags": {
              "Name": "iti_instances"
            },
            "tags_all": {
              "Name": "iti_instances"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bb5e45f46f052368",
              "sg-0d855d7421e67656e",
              "sg-0f778f3c219cffe07"
            ]
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "aws_security_group.allow_outbound",
            "aws_security_group.allow_ssh",
            "aws_security_group.database"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed9277fb7eb570c9",
            "arn": "arn:aws:ec2:us-east-1:135345210272:instance/i-0c82605a88e4c71a9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c82605a88e4c71a9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d7952ec3d5f94667",
            "private_dns": "ip-192-168-22-48.ec2.internal",
            "private_ip": "192.168.22.48",
            "public_ip": "3.92.245.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-027670bc7913b3dd1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c37fad963a084b6e",
            "tags": {
              "Name": "iti_instances"
            },
            "tags_all": {
              "Name": "iti_instances"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bb5e45f46f052368",
              "sg-0d855d7421e67656e",
              "sg-0f778f3c219cffe07"
            ]
          },
          "dependencies": [
            "aws_security_group.database",
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "aws_security_group.allow_outbound",
            "aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135345210272:internet-gateway/igw-08ba17e01c7b0a728",
            "id": "igw-08ba17e01c7b0a728",
            "owner_id": "135345210272",
            "tags": {
              "Name": "iti_igw"
            },
            "tags_all": {
              "Name": "iti_igw"
            },
            "vpc_id": "vpc-09e053360d5903c18"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135345210272:route-table/rtb-08d8938a726974e4d",
            "id": "rtb-08d8938a726974e4d",
            "owner_id": "135345210272",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08ba17e01c7b0a728",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "iti_route_igw"
            },
            "tags_all": {
              "Name": "iti_route_igw"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e053360d5903c18"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039ccb21296af5019",
            "route_table_id": "rtb-08d8938a726974e4d",
            "subnet_id": "subnet-0500c40ccf3244f70"
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_internet_gateway.igw",
            "aws_route_table.route_igw",
            "aws_subnet.public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af3379a773172f56",
            "route_table_id": "rtb-08d8938a726974e4d",
            "subnet_id": "subnet-03f3583f2cf141263"
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "aws_internet_gateway.igw",
            "aws_route_table.route_igw"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0005bd8eedc284355",
            "route_table_id": "rtb-08d8938a726974e4d",
            "subnet_id": "subnet-0c37fad963a084b6e"
          },
          "dependencies": [
            "aws_route_table.route_igw",
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135345210272:security-group/sg-0bb5e45f46f052368",
            "description": "Allow Outbound",
            "egress": [],
            "id": "sg-0bb5e45f46f052368",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "iti_allow_outbound",
            "name_prefix": "",
            "owner_id": "135345210272",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09e053360d5903c18"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135345210272:security-group/sg-0d855d7421e67656e",
            "description": "Allow SSH",
            "egress": [],
            "id": "sg-0d855d7421e67656e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "iti_allow_ssh",
            "name_prefix": "",
            "owner_id": "135345210272",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e053360d5903c18"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135345210272:security-group/sg-0f778f3c219cffe07",
            "description": "Allow POSTGRES",
            "egress": [],
            "id": "sg-0f778f3c219cffe07",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Postgres",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 5432
              }
            ],
            "name": "iti_databse",
            "name_prefix": "",
            "owner_id": "135345210272",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09e053360d5903c18"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135345210272:subnet/subnet-090a7b8b686d46e47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.10.0/24",
            "id": "subnet-090a7b8b686d46e47",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135345210272",
            "tags": {
              "Name": "iti_private_subnet_0"
            },
            "tags_all": {
              "Name": "iti_private_subnet_0"
            },
            "vpc_id": "vpc-09e053360d5903c18"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135345210272:subnet/subnet-055fc19a96fe5c69d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.11.0/24",
            "id": "subnet-055fc19a96fe5c69d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135345210272",
            "tags": {
              "Name": "iti_private_subnet_1"
            },
            "tags_all": {
              "Name": "iti_private_subnet_1"
            },
            "vpc_id": "vpc-09e053360d5903c18"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135345210272:subnet/subnet-0b0638c567c4985a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.12.0/24",
            "id": "subnet-0b0638c567c4985a0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135345210272",
            "tags": {
              "Name": "iti_private_subnet_2"
            },
            "tags_all": {
              "Name": "iti_private_subnet_2"
            },
            "vpc_id": "vpc-09e053360d5903c18"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135345210272:subnet/subnet-0500c40ccf3244f70",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.20.0/24",
            "id": "subnet-0500c40ccf3244f70",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "135345210272",
            "tags": {
              "Name": "iti_public_subnet_0"
            },
            "tags_all": {
              "Name": "iti_public_subnet_0"
            },
            "vpc_id": "vpc-09e053360d5903c18"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135345210272:subnet/subnet-03f3583f2cf141263",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.21.0/24",
            "id": "subnet-03f3583f2cf141263",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "135345210272",
            "tags": {
              "Name": "iti_public_subnet_1"
            },
            "tags_all": {
              "Name": "iti_public_subnet_1"
            },
            "vpc_id": "vpc-09e053360d5903c18"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135345210272:subnet/subnet-0c37fad963a084b6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.22.0/24",
            "id": "subnet-0c37fad963a084b6e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "135345210272",
            "tags": {
              "Name": "iti_public_subnet_2"
            },
            "tags_all": {
              "Name": "iti_public_subnet_2"
            },
            "vpc_id": "vpc-09e053360d5903c18"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135345210272:vpc/vpc-09e053360d5903c18",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-07fefe26dc53c6685",
            "default_route_table_id": "rtb-08d247014e6769622",
            "default_security_group_id": "sg-04d20b42da2ef4dc7",
            "dhcp_options_id": "dopt-937a51e9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09e053360d5903c18",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08d247014e6769622",
            "owner_id": "135345210272",
            "tags": {
              "Name": "iti"
            },
            "tags_all": {
              "Name": "iti"
            }
          }
        }
      ]
    }
  ]
}